# vulngate

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION.md  LICENSE  README.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  scanner-freshness.yml
action/: README.md  action.yml  example-workflow.yml
action/scripts/: diff_filter.py  pr_comment.py  triage.py
adapters/: AGENTS.md  README.md  SKILL.md  cursor.mdc
mcp-server/: README.md  server.py
schemas/: findings.schema.json
scripts/: check_scanner_freshness.py
test-fixtures/vulnerable-sample/: package-lock.json  package.json  requirements.txt
test-fixtures/vulnerable-sample/src/: app.py  config.py
tests/: test_action_scripts.py  test_core.py  test_mcp.py
vulngate/: __init__.py  cli.py  config.py  detect.py  knowledge.py  mcp_server.py  report.py  schema.py
vulngate/scanners/: __init__.py  base.py  gitleaks_scanner.py  npm_audit_scanner.py  pip_audit_scanner.py  semgrep_scanner.py
