[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulngate"
version = "1.5.2"
description = "Agent-neutral security checks before you ship. Find, understand, and fix vulnerabilities in AI- or human-written code."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "vulngate contributors" }]
keywords = ["security", "sast", "secrets", "sca", "semgrep", "gitleaks", "ci", "sarif", "ai", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]
# The core has ZERO required runtime dependencies — stdlib only.
dependencies = []

[project.optional-dependencies]
# `pip install vulngate[scanners]` pulls a working Python scanner stack in one shot.
# (gitleaks is a Go binary installed separately; npm audit uses the local npm.)
scanners = ["semgrep>=1.60", "pip-audit>=2.7"]
# `pip install vulngate[mcp]` adds the local stdio MCP server (Phase 3).
mcp = ["mcp>=1.2"]
dev = ["pytest>=8", "jsonschema>=4"]

[project.scripts]
vulngate = "vulngate.cli:main"
vulngate-mcp = "vulngate.mcp_server:main"

[project.urls]
Homepage = "https://github.com/cisoventures/vulngate"
Issues = "https://github.com/cisoventures/vulngate/issues"

[tool.hatch.build.targets.wheel]
packages = ["vulngate"]
